added camera and movement

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<title>!Hackathon!</title>
 	<head>
+		<script src="jquery-3.6.0.min.js"></script>
 		<script src="two.js"></script>
 	</head>
 <body>
