added hitboxes, buildings, text

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 	<title>!Hackathon!</title>
 	<head>
-		<script src="jquery-3.6.0.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<script src="util.js"></script>
 		<script src="two.js"></script>
 	</head>
-<body>
+<body style="user-select: none;">
 </body>
 	<script src="gfx.js"></script>
 </html>
