--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <html>
-	<title>!Hackathon!</title>
-	<head>
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-		<script src="util.js"></script>
-		<script src="two.js"></script>
-	</head>
-<body style="user-select: none;">
-</body>
-	<script src="gfx.js"></script>
-</html>
+<title>!Hackathon!</title>
 
+<head>
+	<!-- Bootstrap 5.0 -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="util.js"></script>
+	<script src="two.js"></script>
+</head>
+
+<body style="user-select: none;">
+
+	<!-- Bootsrap 5.0 Javascripts -->
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+		integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+		integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
+	</script>
+</body>
+<script src="gfx.js"></script>
+
+</html>
