--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<title>!Hackathon!</title>
+<title>Cannext - Connecting Pathways</title>
 
 <head>
 	<!-- Bootstrap 5.0 -->
@@ -13,6 +13,9 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="util.js"></script>
 	<script src="two.js"></script>
+
+	<!-- Favicon -->
+	<link rel="icon" type="image/x-icon" href="/imgs/logo.png">
 </head>
 
 <body style="user-select: none;">
