--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<title>Cannext - Connecting Pathways</title>
+<title>Cannext - Home</title>
 
 <head>
 	<!-- Bootstrap 5.0 -->
@@ -7,7 +7,7 @@
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="/style/style.css">
+	<link rel="stylesheet" href="/CSS/styles.css">
 	</link>
 
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -19,6 +19,62 @@
 </head>
 
 <body style="user-select: none;">
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<h1>Cannext</h1>
+			</div>
+			<div class="col">
+				<img src="/imgs/logo.svg" alt="logo">
+			</div>
+		</div>
+
+		<div class="row">
+			<h2>Helping you connect pathways to the future.</h2>
+			<div class="button">Sign Up and Connect</div>
+			<p><span class="opacity-25">Already have an account?</span> Login</p>
+		</div>
+
+		<!-- Screenshots carousel -->
+		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+			<div class="carousel-indicators">
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+					aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+					aria-label="Slide 2"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+					aria-label="Slide 3"></button>
+			</div>
+
+			<!-- Images -->
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="imgs/Frame - 1.png" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="imgs/Frame - 2.png" class="d-block w-100" alt="...">
+				</div>
+				<div class="carousel-item">
+					<img src="imgs/Frame - 3.png" class="d-block w-100" alt="...">
+				</div>
+			</div>
+
+			<!-- Next and Prev Buttons -->
+			<!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+				data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+				data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button> -->
+		</div>
+
+
+
+	</div>
 
 	<!-- Bootsrap 5.0 Javascripts -->
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
