--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
 	<script src="two.js"></script>
 
 	<!-- Favicon -->
-	<link rel="icon" type="image/x-icon" href="/imgs/logo.png">
+	<link rel="icon" type="image/x-icon" href="../imgs/logo.png">
 </head>
 
 <body style="user-select: none;">
