--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,9 @@
 <html>
 	<title>!Hackathon!</title>
 	<head>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 		<script src="util.js"></script>
 		<script src="two.js"></script>
