basic skelly for login html

--- a/html/login.html
+++ b/html/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=720, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cannext - Login</title>
 
     <!-- Bootstrap 5.0 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,7 +19,51 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <!-- Title + sub -->
+                <h1>Cannext</h1>
+                <img src="/imgs/logo.svg" alt="logo">
+                <h2>Helping you connect pathways to the future.</h2>
+                <div class="btn btn-primary">Sign Up and Connect</div>
 
+
+
+                <!-- Login form -->
+                <!-- https://web.dev/sign-in-form-best-practices/ -->
+                <h3>Login</h3>
+                <form class="row g-3">
+                    <div class="col">
+                        <div class="col">
+                            <label for="inputEmail4" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="current-email" autocomplete="email">
+                        </div>
+
+                        <div class="col">
+                            <label for="inputPassword4" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="current-password"
+                                autocomplete="current-password">
+                        </div>
+
+                        <div class="col">
+                            <button type="submit" class="btn btn-primary">Sign in</button>
+                        </div>
+                    </div>
+                    <div class="col">
+
+                    </div>
+                </form>
+
+
+            </div>
+
+            <div class="col">
+                <!-- Image prev here -->
+                <img src="../imgs/demo1.png" alt="">
+            </div>
+        </div>
+    </div>
 
     <!-- Bootsrap 5.0 Javascripts -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
