--- a/html/intro.html
+++ b/html/intro.html
@@ -14,6 +14,7 @@
 </head>
 
 <body style="user-select: none;">
+	<!-- Title w. logo and sub -->
 	<div class="container">
 		<div class="row">
 			<div class="col">
