signup html skelly

--- a/html/login.html
+++ b/html/login.html
@@ -26,8 +26,6 @@
                 <h1>Cannext</h1>
                 <img src="/imgs/logo.svg" alt="logo">
                 <h2>Helping you connect pathways to the future.</h2>
-                <div class="btn btn-primary">Sign Up and Connect</div>
-
 
 
                 <!-- Login form -->
@@ -60,7 +58,7 @@
 
             <div class="col">
                 <!-- Image prev here -->
-                <img src="../imgs/demo1.png" alt="">
+                <img src="/imgs/demo1.png" alt="">
             </div>
         </div>
     </div>
