--- a/html/signup.html
+++ b/html/signup.html
@@ -19,6 +19,46 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <!-- Title w. sub -->
+                <h1>Cannext</h1>
+                <img src="/imgs/logo.svg" alt="logo">
+                <h2>Helping you connect pathways to the future.</h2>
+
+                <!-- Sign up Form -->
+                <!-- https://web.dev/sign-in-form-best-practices/ -->
+                <h3>Login</h3>
+                <form class="row g-3">
+                    <div class="col">
+                        <div class="col">
+                            <label for="inputEmail4" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="new-email" autocomplete="email">
+                        </div>
+
+                        <div class="col">
+                            <label for="inputPassword4" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="new-password" autocomplete="new-password">
+                        </div>
+
+                        <div class="col">
+                            <button type="submit" class="btn btn-primary">Sign Up and Connect</button>
+                        </div>
+                    </div>
+                    <div class="col">
+
+                    </div>
+                </form>
+            </div>
+            <div class="col">
+                <!-- Image demo here -->
+                <h3>Create your character</h3>
+                <img src="/imgs/demo2.png" alt="">
+            </div>
+        </div>
+    </div>
+
 
 
     <!-- Bootsrap 5.0 Javascripts -->
