fix title and sub code

--- a/html/intro.html
+++ b/html/intro.html
@@ -14,21 +14,25 @@
 </head>
 
 <body style="user-select: none;">
-	<!-- Title w. logo and sub -->
 	<div class="container">
-		<div class="row">
-			<div class="col">
-				<h1>Cannext</h1>
-			</div>
-			<div class="col">
-				<img src="/imgs/logo.svg" alt="logo">
-			</div>
-		</div>
+		<!-- Title + sub -->
+		<div class="fuid-container">
+			<div class="row">
+				<div class="col-auto">
+					<a href="./intro.html">
+						<h1>Cannext</h1>
+					</a>
+				</div>
 
-		<div class="row">
-			<h2>Helping you connect pathways to the future.</h2>
-			<div class="button">Sign Up and Connect</div>
-			<p><span class="opacity-25">Already have an account?</span> Login</p>
+				<div class="col">
+					<a href="./intro.html">
+						<img src="/imgs/logo.svg" alt="logo">
+					</a>
+				</div>
+			</div>
+			<div class="row">
+				<h2>Helping you connect pathways to the future.</h2>
+			</div>
 		</div>
 
 		<!-- Screenshots carousel -->
@@ -80,4 +84,5 @@
 		integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
 	</script>
 </body>
+
 </html>
