--- a/html/signup.html
+++ b/html/signup.html
@@ -22,10 +22,25 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <!-- Title w. sub -->
-                <h1>Cannext</h1>
-                <img src="/imgs/logo.svg" alt="logo">
-                <h2>Helping you connect pathways to the future.</h2>
+                <!-- Title + sub -->
+                <div class="fuid-container">
+                    <div class="row">
+                        <div class="col-auto">
+                            <a href="./intro.html">
+                                <h1>Cannext</h1>
+                            </a>
+                        </div>
+
+                        <div class="col">
+                            <a href="./intro.html">
+                                <img src="/imgs/logo.svg" alt="logo">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <h2>Helping you connect pathways to the future.</h2>
+                    </div>
+                </div>
 
                 <!-- Sign up Form -->
                 <!-- https://web.dev/sign-in-form-best-practices/ -->
@@ -44,11 +59,10 @@
 
                         <div class="col">
                             <button type="submit" class="btn btn-primary">Sign Up and Connect</button>
+                            <p>Already have an account? <a href="./login.html">Log In</a></p>
                         </div>
                     </div>
-                    <div class="col">
 
-                    </div>
                 </form>
             </div>
             <div class="col">
