--- a/html/login.html
+++ b/html/login.html
@@ -23,9 +23,24 @@
         <div class="row">
             <div class="col">
                 <!-- Title + sub -->
-                <h1>Cannext</h1>
-                <img src="/imgs/logo.svg" alt="logo">
-                <h2>Helping you connect pathways to the future.</h2>
+                <div class="fuid-container">
+                    <div class="row">
+                        <div class="col-auto">
+                            <a href="./intro.html">
+                                <h1>Cannext</h1>
+                            </a>
+                        </div>
+
+                        <div class="col">
+                            <a href="./intro.html">
+                                <img src="/imgs/logo.svg" alt="logo">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <h2>Helping you connect pathways to the future.</h2>
+                    </div>
+                </div>
 
 
                 <!-- Login form -->
@@ -46,6 +61,7 @@
 
                         <div class="col">
                             <button type="submit" class="btn btn-primary">Sign in</button>
+                            <p>Don’t have an account? <a href="./signup.html">Sign up</a></p>
                         </div>
                     </div>
                     <div class="col">
