fix login and body margin

--- a/html/login.html
+++ b/html/login.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="fluid-container">
         <div class="row">
             <div class="col">
                 <!-- Title + sub -->
@@ -64,8 +64,8 @@
                             <p>Don’t have an account? <a href="./signup.html">Sign up</a></p>
                         </div>
                     </div>
+                    
                     <div class="col">
-
                     </div>
                 </form>
 
