--- a/html/signup.html
+++ b/html/signup.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="fluid-container">
         <div class="row">
             <div class="col">
                 <!-- Title + sub -->
@@ -61,6 +61,9 @@
                             <button type="submit" class="btn btn-primary">Sign Up and Connect</button>
                             <p>Already have an account? <a href="./login.html">Log In</a></p>
                         </div>
+                    </div>
+                    
+                    <div class="col">
                     </div>
 
                 </form>
