--- a/html/intro.html
+++ b/html/intro.html
@@ -14,63 +14,75 @@
 </head>
 
 <body style="user-select: none;">
-	<div class="container">
-		<!-- Title + sub -->
-		<div class="fuid-container">
-			<div class="row">
-				<div class="col-auto">
-					<a href="./intro.html">
-						<h1>Cannext</h1>
-					</a>
+	<div class="fluid-container">
+		<div class="row">
+			<div class="col">
+				<!-- Title + sub -->
+				<div class="fuid-container">
+					<div class="row">
+						<div class="col-auto">
+							<a href="./intro.html">
+								<h1>Cannext</h1>
+							</a>
+						</div>
+
+						<div class="col">
+							<a href="./intro.html">
+								<img src="/imgs/logo.svg" alt="logo">
+							</a>
+						</div>
+					</div>
+					<div class="row">
+						<h2>Helping you connect pathways to the future.</h2>
+					</div>
 				</div>
 
-				<div class="col">
-					<a href="./intro.html">
-						<img src="/imgs/logo.svg" alt="logo">
-					</a>
-				</div>
+				<button type="submit" class="btn btn-primary">Sign up and Connect</button>
+				<p>Already have an account? <a href="./login.html">Log In</a></p>
 			</div>
-			<div class="row">
-				<h2>Helping you connect pathways to the future.</h2>
+
+			<div class="col-9">
+				<!-- Image carousel here -->
+				<!-- Screenshots carousel -->
+				<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+					<div class="carousel-indicators">
+						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+							aria-current="true" aria-label="Slide 1"></button>
+						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+							aria-label="Slide 2"></button>
+						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+							aria-label="Slide 3"></button>
+					</div>
+		
+					<!-- Images -->
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img src="../imgs/Frame - 1.png" class="d-block w-100" alt="...">
+						</div>
+						<div class="carousel-item">
+							<img src="../imgs/Frame - 2.png" class="d-block w-100" alt="...">
+						</div>
+						<div class="carousel-item">
+							<img src="../imgs/Frame - 3.png" class="d-block w-100" alt="...">
+						</div>
+					</div>
+		
+					<!-- Next and Prev Buttons -->
+					<!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+						data-bs-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Previous</span>
+					</button>
+					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+						data-bs-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Next</span>
+					</button> -->
+				</div>
+
 			</div>
 		</div>
 
-		<!-- Screenshots carousel -->
-		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-					aria-current="true" aria-label="Slide 1"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-					aria-label="Slide 2"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-					aria-label="Slide 3"></button>
-			</div>
-
-			<!-- Images -->
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="../imgs/Frame - 1.png" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="../imgs/Frame - 2.png" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="../imgs/Frame - 3.png" class="d-block w-100" alt="...">
-				</div>
-			</div>
-
-			<!-- Next and Prev Buttons -->
-			<!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-				data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-				data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button> -->
-		</div>
 
 
 
