add game.html skeleton. add ids to buttons, add imgs

--- a/html/login.html
+++ b/html/login.html
@@ -60,7 +60,7 @@
                         </div>
 
                         <div class="col">
-                            <button type="submit" class="btn btn-primary">Sign in</button>
+                            <button id="signin-btn" type="submit" class="btn btn-primary">Sign in</button>
                             <p>Don’t have an account? <a href="./signup.html">Sign up</a></p>
                         </div>
                     </div>
