--- a/html/intro.html
+++ b/html/intro.html
@@ -37,7 +37,7 @@
 					</div>
 				</div>
 
-				<button type="submit" class="btn btn-primary">Sign up and Connect</button>
+				<button id="signup-btn" type="submit" class="btn btn-primary">Sign up and Connect</button>
 				<p>Already have an account? <a href="./login.html">Log In</a></p>
 			</div>
 
