--- a/html/signup.html
+++ b/html/signup.html
@@ -58,7 +58,7 @@
                         </div>
 
                         <div class="col">
-                            <button type="submit" class="btn btn-primary">Sign Up and Connect</button>
+                            <button id="signup-btn" type="submit" class="btn btn-primary">Sign Up and Connect</button>
                             <p>Already have an account? <a href="./login.html">Log In</a></p>
                         </div>
                     </div>
