--- a/html/login.html
+++ b/html/login.html
@@ -63,6 +63,7 @@
                             <button id="signin-btn" type="submit" class="btn btn-primary">Sign in</button>
                             <p>Don’t have an account? <a href="./signup.html">Sign up</a></p>
                         </div>
+                        <a href="./game.html" class="btn btn-primary">Go to game.html</a>
                     </div>
                     
                     <div class="col">
