improve layout design on game.html

--- a/html/game.html
+++ b/html/game.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=720, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cannext - Game</title>
 
     <!-- Bootstrap 5.0 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -30,7 +30,10 @@
                                 <div class="row">
                                     <!-- Logo -->
                                     <div class="col">
-                                        <a href="./intro.html"><img src="/imgs/logo.png" width="20%" alt="logo.png"></a>
+                                        <a href="./intro.html">
+                                            Cannext
+                                            <img src="/imgs/logo.png" width="10%" alt="logo.png">
+                                        </a>
                                     </div>
 
                                     <!-- Status bar -->
@@ -85,14 +88,14 @@
                 <!-- CANVAS and Chatbox row -->
                 <div class="row">
                     <!-- Game Canvas -->
-                    <div class="col" style="width: 100%;">
+                    <div class="col" style="max-width: 100%;">
                         <div id="gameCanvas" class="col bg-light">
                         </div>
                     </div>
 
-                    <div class="col-auto">
+                    <div class="col-lg-auto">
                         <!-- Chatbox Image -->
-                        <img src="/imgs/chatbox.png" alt="" style="max-width: 30vw;">
+                        <div id="chatbox"> <img class="img-fluid" src="/imgs/chatbox.png" alt=""></div>
                     </div>
                 </div>
 
