--- a/html/game.html
+++ b/html/game.html
@@ -31,9 +31,11 @@
                                 <div class="row align-items-center">
                                     <!-- Logo -->
                                     <div class="col">
-                                        <a href="./intro.html">
-                                            <h1>Cannext <img src="/imgs/logo.png" width="10%" alt="logo.png"></h1>
-                                        </a>
+                                        <h1>
+                                            <a href="./intro.html">
+                                                Cannext <img src="/imgs/logo.png" width="10%" alt="logo.png">
+                                            </a>
+                                        </h1>
                                     </div>
 
                                     <!-- Level -->
