--- a/html/signup.html
+++ b/html/signup.html
@@ -26,9 +26,11 @@
                 <div class="fuid-container">
                     <div class="row">
                         <div class="col-auto">
-                            <a href="./intro.html">
-                                <h1>Cannext</h1>
-                            </a>
+                            <h1>
+                                <a href="./intro.html">
+                                    Cannext
+                                </a>
+                            </h1>
                         </div>
 
                         <div class="col">
@@ -62,7 +64,7 @@
                             <p>Already have an account? <a href="./login.html">Log In</a></p>
                         </div>
                     </div>
-                    
+
                     <div class="col">
                     </div>
 
