--- a/html/intro.html
+++ b/html/intro.html
@@ -21,9 +21,11 @@
 				<div class="fuid-container">
 					<div class="row">
 						<div class="col-auto">
-							<a href="./intro.html">
-								<h1>Cannext</h1>
-							</a>
+							<h1>
+								<a href="./intro.html">
+									Cannext
+								</a>
+							</h1>
 						</div>
 
 						<div class="col">
@@ -46,14 +48,14 @@
 				<!-- Screenshots carousel -->
 				<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 					<div class="carousel-indicators">
-						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-							aria-current="true" aria-label="Slide 1"></button>
+						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+							class="active" aria-current="true" aria-label="Slide 1"></button>
 						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
 							aria-label="Slide 2"></button>
 						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
 							aria-label="Slide 3"></button>
 					</div>
-		
+
 					<!-- Images -->
 					<div class="carousel-inner">
 						<div class="carousel-item active">
@@ -66,7 +68,7 @@
 							<img src="../imgs/Frame - 3.png" class="d-block w-100" alt="...">
 						</div>
 					</div>
-		
+
 					<!-- Next and Prev Buttons -->
 					<!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
 						data-bs-slide="prev">
