--- a/html/login.html
+++ b/html/login.html
@@ -26,9 +26,11 @@
                 <div class="fuid-container">
                     <div class="row">
                         <div class="col-auto">
-                            <a href="./intro.html">
-                                <h1>Cannext</h1>
-                            </a>
+                            <h1>
+                                <a href="./intro.html">
+                                    Cannext
+                                </a>
+                            </h1>
                         </div>
 
                         <div class="col">
@@ -65,7 +67,7 @@
                         </div>
                         <a href="./game.html" class="btn btn-primary">Go to game.html</a>
                     </div>
-                    
+
                     <div class="col">
                     </div>
                 </form>
