fix layout issues

--- a/html/game.html
+++ b/html/game.html
@@ -19,14 +19,14 @@
 </head>
 
 <body>
-    <div class="fluid-container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col">
-                <div class="fluid-container">
+                <div class="container-fluid p-0">
                     <div class="row pb-3">
                         <!-- Status Bar -->
                         <div class="col">
-                            <div class="fluid-container">
+                            <div class="container-fluid p-0">
                                 <!-- Satus bar above game -->
                                 <div class="row align-items-center">
                                     <!-- Logo -->
