--- a/html/intro.html
+++ b/html/intro.html
@@ -14,12 +14,12 @@
 </head>
 
 <body style="user-select: none;">
-	<div class="fluid-container">
-		<div class="row">
+	<div class="container-fluid">
+		<div class="row align-items-center">
 			<div class="col">
 				<!-- Title + sub -->
-				<div class="fuid-container">
-					<div class="row">
+				<div class="fuid-container mb-3">
+					<div class="row align-items-center">
 						<div class="col-auto">
 							<h1>
 								<a href="./intro.html">
@@ -39,20 +39,21 @@
 					</div>
 				</div>
 
-				<button id="signup-btn" type="submit" class="btn btn-primary">Sign up and Connect</button>
+				<button id="signup-btn" type="submit" class="btn btn-primary mb-3">Sign up and Connect</button>
+
 				<p>Already have an account? <a href="./login.html">Log In</a></p>
 			</div>
 
 			<div class="col-9">
 				<!-- Image carousel here -->
 				<!-- Screenshots carousel -->
-				<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+				<div id="homeCarousel" class="carousel slide" data-bs-ride="carousel">
 					<div class="carousel-indicators">
-						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+						<button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="0"
 							class="active" aria-current="true" aria-label="Slide 1"></button>
-						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+						<button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="1"
 							aria-label="Slide 2"></button>
-						<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+						<button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="2"
 							aria-label="Slide 3"></button>
 					</div>
 
