--- a/html/login.html
+++ b/html/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=720, initial-scale=1.0">
-    <title>Cannext - Login</title>
+    <title>Cannext - Log In</title>
 
     <!-- Bootstrap 5.0 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,12 +19,12 @@
 </head>
 
 <body>
-    <div class="fluid-container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col">
                 <!-- Title + sub -->
-                <div class="fuid-container">
-                    <div class="row">
+                <div class="fuid-container mb-5">
+                    <div class="row align-items-center my-3">
                         <div class="col-auto">
                             <h1>
                                 <a href="./intro.html">
@@ -44,43 +44,46 @@
                     </div>
                 </div>
 
-
-                <!-- Login form -->
+                <!-- Sign up Form -->
                 <!-- https://web.dev/sign-in-form-best-practices/ -->
-                <h3>Login</h3>
+                <h3 class="mb-3">Login</h3>
                 <form class="row g-3">
                     <div class="col">
                         <div class="col">
                             <label for="inputEmail4" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="current-email" autocomplete="email">
+                            <input type="email" class="form-control" id="new-email" autocomplete="email">
                         </div>
 
                         <div class="col">
                             <label for="inputPassword4" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="current-password"
-                                autocomplete="current-password">
+                            <input type="password" class="form-control" id="new-password" autocomplete="new-password">
                         </div>
-
+                        
+                        <!-- Signup button -->
                         <div class="col">
-                            <button id="signin-btn" type="submit" class="btn btn-primary">Sign in</button>
-                            <p>Don’t have an account? <a href="./signup.html">Sign up</a></p>
+                            <button id="signup-btn" type="submit" class="btn btn-primary my-3">Log In</button>
+                                <p>Don’t have an account? <a href="./signup.html">Sign up</a></p>
                         </div>
-                        <a href="./game.html" class="btn btn-primary">Go to game.html</a>
+                        <a href="./loading.html" class="btn btn-primary">Go to game.html</a>
+
                     </div>
 
                     <div class="col">
                     </div>
+
                 </form>
-
-
             </div>
-
             <div class="col">
-                <!-- Image prev here -->
-                <img src="/imgs/demo1.png" alt="">
+                <!-- Image demo here -->
+                <h3>
+                <span class="ms-5">Create your character</span>
+                </h3>
+                <img src="/imgs/demo2.png" alt="">
             </div>
         </div>
     </div>
+
+
 
     <!-- Bootsrap 5.0 Javascripts -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
