--- a/html/signup.html
+++ b/html/signup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=720, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cannext - Sign up</title>
 
     <!-- Bootstrap 5.0 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,66 +19,78 @@
 </head>
 
 <body>
-    <div class="fluid-container">
-        <div class="row">
-            <div class="col">
-                <!-- Title + sub -->
-                <div class="fuid-container">
-                    <div class="row">
-                        <div class="col-auto">
-                            <h1>
+    <div class="container">
+
+        <div class="container-fluid">
+            <div class="row align-items-center">
+                <div class="col">
+                    <!-- Title + sub -->
+                    <div class="fuid-container mb-5">
+                        <div class="row align-items-center my-2">
+                            <div class="col-auto">
+                                <h1>
+                                    <a href="./intro.html">
+                                        Cannext
+                                    </a>
+                                </h1>
+                            </div>
+
+                            <div class="col">
                                 <a href="./intro.html">
-                                    Cannext
+                                    <img src="/imgs/logo.svg" alt="logo">
                                 </a>
-                            </h1>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <h2>Helping you connect pathways to the future.</h2>
+                        </div>
+                    </div>
+
+
+                    <!-- Login form -->
+                    <!-- https://web.dev/sign-in-form-best-practices/ -->
+                    <h3 class="mb-3">Sign up</h3>
+                    <form class="row g-3">
+                        <div class="col">
+
+                            <div class="col">
+                                <label for="inputName1" class="form-label">Display Name</label>
+                                <input type="email" class="form-control" id="current-email" autocomplete="email">
+                            </div>
+                            <div class="col">
+                                <label for="inputEmail4" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="current-email" autocomplete="email">
+                            </div>
+
+                            <div class="col">
+                                <label for="inputPassword4" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="current-password"
+                                    autocomplete="current-password">
+                            </div>
+
+                            <div class="col">
+                                <button id="signin-btn" type="submit" class="btn btn-primary my-3">Sign
+                                    in</button>
+                                <p>Already have an account? <a href="./login.html">Log In</a></p>
+                            </div>
                         </div>
 
                         <div class="col">
-                            <a href="./intro.html">
-                                <img src="/imgs/logo.svg" alt="logo">
-                            </a>
                         </div>
-                    </div>
-                    <div class="row">
-                        <h2>Helping you connect pathways to the future.</h2>
-                    </div>
+
+                    </form>
+
+
                 </div>
 
-                <!-- Sign up Form -->
-                <!-- https://web.dev/sign-in-form-best-practices/ -->
-                <h3>Login</h3>
-                <form class="row g-3">
-                    <div class="col">
-                        <div class="col">
-                            <label for="inputEmail4" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="new-email" autocomplete="email">
-                        </div>
-
-                        <div class="col">
-                            <label for="inputPassword4" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="new-password" autocomplete="new-password">
-                        </div>
-
-                        <div class="col">
-                            <button id="signup-btn" type="submit" class="btn btn-primary">Sign Up and Connect</button>
-                            <p>Already have an account? <a href="./login.html">Log In</a></p>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                    </div>
-
-                </form>
-            </div>
-            <div class="col">
-                <!-- Image demo here -->
-                <h3>Create your character</h3>
-                <img src="/imgs/demo2.png" alt="">
+                <div class="col">
+                    <!-- Image prev here -->
+                    <img src="/imgs/demo1.png" alt="">
+                </div>
             </div>
         </div>
+
     </div>
-
-
 
     <!-- Bootsrap 5.0 Javascripts -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
